# kamera

./: .gitignore  .gitmodules  CMakeLists.txt  configure.sh  readme.md
include/: editor.h  funcs.h  kamera.h  kkamera.h  kmrutils.h  kutils.h
libraries/: CMakeLists.txt
libraries/opencv/: CMakeLists.txt
libraries/wxwidgets/: CMakeLists.txt
src/: CMakeLists.txt  edit.cpp  funcs.cpp  kkamera.cpp  kutils.h  main.cpp  options.cpp  pulse.cpp
